--- a/css/global.css
+++ b/css/global.css
@@ -335,14 +335,22 @@ margin-left: 38px;
 }
 #header .nav-link{
 padding: 25px 15px;
-color: #022147;
+/* color: #022147; */
+color: #ffffff;
 font-weight: bold;
 text-transform:uppercase;
-font-size:13px;
+font-size:17px;
  }
+.bg-theme{
+background-color:#ff7e5a !important;
+}
+.bg-theme2{
+background-color:#6c2916 !important;
+}
 #header .nav-link:hover{
 background:none;
-color:#f74f22;
+/* color:#f74f22; */
+color:#fbddb2;
  }
 #header .nav-link:focus{
 background:none;
@@ -350,7 +358,14 @@ color:#f74f22;
  }
 #header .active{
 background:none;
-color:#f74f22;
+/* color:#f74f22; */
+color:#fbddb2;
+ }
+.carousel-height{
+  height: 700px;
+ }
+.img-ra{
+  height: 700px;
  }
 
 #header .drop_1{
@@ -388,7 +403,8 @@ right:0!important;
 position: fixed;
 top: 0;
 width: 100%!important;
-background-color:#fff!important;
+/* background-color:#fff!important; */
+background-color:#ff7e5a !important;
 border-radius:0;
 box-shadow: 0px 10px 50px 0px rgb(53 82 99 / 9%);
 }
