--- a/css/global.css
+++ b/css/global.css
@@ -361,12 +361,12 @@ background:none;
 /* color:#f74f22; */
 color:#fbddb2;
  }
-.carousel-height{
+/* .carousel-height{
   height: 700px;
  }
 .img-ra{
   height: 700px;
- }
+ } */
 
 #header .drop_1{
 min-width:230px;
