--- a/css/global.css
+++ b/css/global.css
@@ -832,7 +832,8 @@ border-top:1px solid #efefef;
 margin-top:15px;
  }
 #header .nav-link{
-font-size:26px!important;
+/* font-size:26px!important; */
+font-size:15px!important;
 border-bottom:1px solid #efefef;
 padding-top:10px;
 padding-bottom:10px;
