--- a/css/custome.css
+++ b/css/custome.css
@@ -9,13 +9,20 @@
 .img-ra{
   height: 700px;
  }
+.margin-ra{
+    padding-top: 40px;  
+}
 
  }
     @media (max-width:779px) {
 .display-mobile-none{
     display:none;
 }
+.img-ra{
+    height: 350px;
+}
     }
+
 
 
 
@@ -34,4 +41,46 @@
 /* Mobile: show only 1 card */
 @media(max-width: 768px){
   .card { flex: 0 0 100%; }
+}
+
+
+
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.6);
+  display: none; /* Initially hidden */
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+/* Popup box */
+.popup-content {
+  background: #fff;
+  padding: 20px;
+  max-width: 500px;
+  text-align: center;
+  border-radius: 10px;
+  position: relative;
+}
+
+/* Close button */
+.popup-close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+/* Popup image */
+.popup-image {
+  width: 100%;
+  height: auto;
+  margin-bottom: 15px;
 }
